<resources>
    <string name="app_name">Record-Dang</string>
    <string name="app_name_kor">기록하당</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id">ID</string>
    <string name="input_id">ID를 입력해주세요</string>
    <string name="password">PW</string>
    <string name="input_pw">비밀번호를 입력해주세요</string>
    <string name="user_name">이름</string>
    <string name="input_name">이름을 입력해주세요</string>
    <string name="login">LOGIN</string>
    <string name="check_id_pw">아이디/비밀번호가 없으신가요?</string>
    <string name="sign_up_kor">회원가입</string>
    <string name="sign_up_eng">SIGNUP</string>
    <string name="my_github_id">HJinhee</string>
    <string name="my_name">Han Jinhee</string>
    <string name="user_id">userId</string>
    <string name="more">MORE</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="jinhee">jinhee</string>
    <string name="GOOGLE_API_KEY">AIzaSyBjlyvhgAKeCDOpD-F0cnxZAFWoZHTMsTg</string>

    <string name="msg_token_fmt" translatable="false">토큰: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

</resources>