<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_kor"
            android:textSize="40sp"
            android:fontFamily="@font/black_han_sans_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/tv_login_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="15dp"
            android:text="@string/id"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/et_login_id"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_app_name" />

        <EditText
            android:id="@+id/et_login_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/input_id"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_login_id"
            app:layout_constraintTop_toBottomOf="@id/tv_app_name" />


        <TextView
            android:id="@+id/tv_login_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/password"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/tv_login_id"
            app:layout_constraintTop_toBottomOf="@+id/et_login_id" />

        <EditText
            android:id="@+id/et_login_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/input_pw"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="@id/et_login_id"
            app:layout_constraintTop_toBottomOf="@+id/et_login_id" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/login"
            android:background="@color/yellow"
            android:fontFamily="@font/black_han_sans_regular"
            app:layout_constraintEnd_toEndOf="@id/et_login_pw"
            app:layout_constraintStart_toStartOf="@id/tv_login_pw"
            app:layout_constraintTop_toBottomOf="@id/et_login_pw" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="@id/btn_login"
            app:layout_constraintTop_toBottomOf="@id/btn_login">

            <TextView
                android:id="@+id/tv_sign_up_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/check_id_pw"
                app:layout_constraintEnd_toStartOf="@+id/tv_sign_up"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                />

            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_kor"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_sign_up_check"
                app:layout_constraintTop_toTopOf="parent"
                android:fontFamily="@font/black_han_sans_regular"


                />

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>